<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="7"
    tools:context=".activity.about.AboutUsActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/application_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/project_name_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/students_title_text_view"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/students_full_names_text_view"
        android:textColor="@android:color/background_light" >
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/professor_title_text_view"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/professor_full_names_text_view"
        android:textColor="@android:color/background_light" >
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/university_name_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/development_semester_text_view"
        android:textColor="@android:color/background_light" >
    </TextView>

</LinearLayout>