<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.configuration.InitialActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_data_configuration_text_view_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_selector_text_view_message"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </TextView>

    <Spinner
        android:id="@+id/email_list_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </Spinner>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/session_data_configuration_text_view_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" >
        </TextView>

        <CheckBox
            android:id="@+id/delete_images_checkBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/delete_images_check_box_message" >
        </CheckBox>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onSetInitialConfiguration"
        android:layout_gravity="bottom"
        android:text="@string/set_initial_configuration_button_label" >
    </Button>

</LinearLayout>